Update index.html with menu changes
 Pages added

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
   <header>
     <nav>
       <a href="#about">About Me</a>
-      <a href="#core">Skills</a>
       <a href="#competencies">Competencies</a>
-      <a href="#projects">Projects</a>   
+      <a href="#projects">Projects</a>
+      <a href="#skills">Skills</a>
       <a href="#certifications">Certifications</a>
       <a href="#contact">Contact</a>
       <a href="#cv">Resume</a>
@@ -129,7 +129,7 @@
   <li>Passionate about mentoring engineers, building high-performing teams, and fostering a culture of continuous improvement.</li>
 </ul>
       <div>
-        <img src="ProfileImage.jpg" alt="About Me Image" style="width:100%; border-radius: 8px;">
+        <img src="ProfileImage.jpeg" style="width:100%; border-radius: 8px;">
       </div>
     </div>
   </section>
@@ -252,6 +252,22 @@
   </ul>
 </div>
   </section>
+
+   <section class="card" id="skills">
+    <h2>Technical Skills</h2> 
+    <div class="grid">
+      <ul>
+        <li><strong>Programming:</strong> Java, C, C++, Python</li>
+        <li><strong>Frameworks:</strong> Spring (Boot, Batch, Cloud), Hibernate, Struts</li>
+        <li><strong>Cloud:</strong> AWS, Azure, PCF</li>
+        <li><strong>Web:</strong> Angular, React.js, Node.js, HTML5, CSS3</li>
+        <li><strong>Databases:</strong> PostgreSQL, MongoDB, Oracle, Neo4j</li>
+        <li><strong>DevOps:</strong> Jenkins, Docker, Kubernetes, GitLab CI/CD</li>
+        <li><strong>Messaging:</strong> Kafka, RabbitMQ, ActiveMQ</li>
+        <li><strong>Security/API:</strong> OAuth 2.0, JWT, Apigee, Gravitee.io, Akamai</li>
+      </ul>
+    </div>
+  </section> 
 
   <section class="card" id="certifications">
     <h2>Certifications</h2>
